--- a/src/templates/docs.html.twig
+++ b/src/templates/docs.html.twig
@@ -11,7 +11,7 @@
                   href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
             <link rel="stylesheet" href="/css/admin.css">
         {% endblock %}
-        <title>{% block title %}Docs • Simple MVC{% endblock %}</title>
+        <title>{% block title %}Docs • Simple CMS{% endblock %}</title>
         <style>
             section {
                 margin-bottom: 3rem;
@@ -29,7 +29,7 @@
             <div class="row expanded app-dashboard-top-nav-bar">
                 <div class="columns medium-2">
                     <button data-toggle="app-dashboard-sidebar" class="menu-icon hide-for-medium"></button>
-                    <a href="/" class="app-dashboard-logo">Simple</a>
+                    <a href="/" class="app-dashboard-logo">Simple CMS</a>
                 </div>
                 <div class="columns show-for-medium">
                     <div class="app-dashboard-search-bar-container">
